--- a/LMP Forecasting.ipynb
+++ b/LMP Forecasting.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Locational Marginal Pricing (LMP) Forecasting using Keras\n",
     "\n",
-    "The following can be used to forecast PJM locational marginal prices in their real-time market using Feed Forward Neural Networks, Recurrent Neural Networks, and Long Short-Term Memory Networks. All of the data available (Outside of electric load forecasts) are available on PJM's website. The code could also be easily adapted for many neural network regression tasks. \n",
+    "The following can be used to forecast PJM locational marginal prices in their real-time market using Feed Forward Neural Networks, Recurrent Neural Networks, and Long Short-Term Memory Networks. All of the data used (Outside of electric load forecasts) is available on PJM's website. The code could also be easily adapted for many neural network regression tasks. \n",
     "\n",
     "## Import "
    ]
